<resources>
    <string name="app_name">HelpDesk</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="index_number">Index number</string>
    <string name="submit">Submit</string>
    <string name="enter_your_index_number_for_reset">Enter Your Index Number For Reset</string>
    <string name="forget_password">Forget Password</string>
    <string name="check_connection">Please check your Internet Connection</string>
    <string name="error_credentials">Please check your index and password</string>

    <string name="password_error">Password must have a minimum of 8 characters and must contain add at least a lower case letter, an uppercase letter, a number and a character.</string>
    <string name="username_or_email">Username or Email</string>
    <string name="internet_connection">Please check your Internet Connection</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="forgot_details">Forgot Details</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_service">Terms of Service</string>
    <string name="by_registering_i_agree_to_the">By registering I agree to the</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="telephone_number">Telephone Number</string>
</resources>
