<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical">

    <ir.alirezabdn.wp7progress.WP10ProgressBar
        android:id="@+id/register_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:animationDuration="2300"
        app:indicatorColor="@color/colorAccent"
        app:indicatorHeight="7"
        app:indicatorRadius="5"
        app:interval="100" />

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolBarTheme"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="20dp"
        android:id="@+id/tb_register"/>

    <LinearLayout
        android:layout_below="@id/tb_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_marginBottom="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:layout_margin="1dp"/>
        </LinearLayout>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Sign Up"
        android:visibility="gone"
        android:fontFamily="@font/roboto_thin"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"
        android:textSize="25sp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:padding="5dp"
                android:textSize="@dimen/text_small"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:hint="Full Name"
                android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etIndex"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="60dp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:hint="Index Number"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="@dimen/text_small" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="60dp"
                    android:drawableStart="@drawable/ic_phone_black_24dp"
                    android:hint="0233743274"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="@dimen/text_small"
                    tools:ignore="TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:textSize="@dimen/text_small"
                android:padding="5dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:hint="Email"
                android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etCustomerPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/password"
                android:padding="5dp"
                android:textSize="@dimen/text_small"
                android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etCustomerConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:textSize="@dimen/text_small"
                android:padding="5dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="ConfirmPassword"
                android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender: "
                    android:layout_marginEnd="20dp"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/colorPrimaryText"/>

                <CheckBox
                    android:id="@+id/cbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="Male"
                    android:textSize="@dimen/text_small"/>

                <CheckBox
                    android:id="@+id/cbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/colorPrimaryText"
                    android:text="Female"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:fontFamily="@font/droid_sans"
                    android:textSize="@dimen/text_small"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/by_registering_i_agree_to_the"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_and_service"
                        android:fontFamily="@font/droid_sans"
                        android:textSize="@dimen/text_small"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_sans"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/text_small"
                        android:text="and"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/droid_sans"
                        android:textSize="@dimen/text_small"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:onClick="btnCustomer"
                android:id="@+id/btnCustomerRegister"
                android:background="@drawable/et_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up"
                android:textSize="@dimen/text_large"
                android:fontFamily="@font/droid_sans"
                android:textAllCaps="false"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>
    </LinearLayout>
</RelativeLayout>